--- a/pyproject.toml
+++ b/pyproject.toml
@@ -215,6 +215,9 @@ lerobot-setup-can="lerobot.scripts.lerobot_setup_can:main"
 [tool.setuptools.packages.find]
 where = ["src"]
 
+[tool.setuptools.dynamic]
+readme = {file = ["README.md"], content-type = "text/markdown"}
+
 [tool.ruff]
 target-version = "py310"
 line-length = 110
